# EOS-EXIF-Join

./: .gitignore  .pre-commit-config.yaml  OrthoRenamer.py  Pipfile  README.md  gui.py  joinData.py  joinData.spec  joinData.ui  joinData_gui.py  log.txt  ortho_rename.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: gui_release.yml  pypi_package.yml  pypi_release.yml  release.yml
Test/: ExifLog.csv
core/: OrthoRenamer.py
gui/: __main__.py
gui/resources/: gui.ui
join_eos_exif/: OrthoRenamer.py  __init__.py
resources/: gui.ui
sample_files/1/: EoS.txt  ExifLog.csv  eos_exif_joined.txt  outText.txt
sample_files/2/: D069_sess2_EOS.txt  ExifLogV2.csv
sample_files/3/: EoS.txt  test.txt
sample_files/4/: EoS.txt  ExifLog.csv  eos_exif_joined.txt
sample_files/5/: EoS.txt  ExifLog.csv
scripts/: build_linux.sh  build_windows.sh
