[tool.poetry]
name = "join-eos-exif"
version = "0.0.0"
description = "Join EOS files to images using EXIF data"
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "join_eos_exif"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
PyQt6 = "^6.4.0"
pandas = "^1.5.2"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.6.2"
flake8 = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
