[tool.poetry]
name = "join-eos-exif"
version = "0.0.0"
description = "Join EOS files to images using EXIF data"
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "join_eos_exif"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
PyQt6 = "^6.4.0"
numpy = "^1.23.5"
pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.1"
pyinstaller = "^5.6.2"
pytest = "^7.2.0"
ruff = "^0.0.265"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
